# Lms_project-drf

./: .env.sample  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
custom_user/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py
learning_hub/: admin.py  apps.py  pagination.py  serializers.py  services.py  urls.py  validators.py
learning_hub/migrations/: 0001_initial.py  0002_course_course_owner_lesson_lesson_owner.py  0003_alter_course_course_owner_alter_lesson_lesson_owner.py  0004_alter_lesson_options.py
learning_hub/models/: __init__.py  course.py  lesson.py
learning_hub/permissions/: __init__.py  common_permissions.py  course_permissions.py  lesson_permissions.py
learning_hub/serializers/: __init__.py  course_serializer.py  custom_obtain_serializer.py  lesson_seriaizer.py  lesson_serializer.py
learning_hub/tests/: __init__.py  test_lesson_create.py  test_lesson_delete.py  test_lesson_detail.py  test_lesson_list.py  test_lesson_update.py
learning_hub/views/: __init__.py  course_views.py  custom_obtain_token_views.py  lesson_views.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payments_paid_course_and_more.py
subscription/: admin.py  apps.py  models.py  serializers.py  task.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
subscription/tests/: __init__.py  test_course_subscribtion.py  test_course_unsubscribtion.py
